--- a/GAN_Patch.ipynb
+++ b/GAN_Patch.ipynb
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 33
         },
-        "outputId": "38c56145-b462-4142-e6b0-484f37d7e434"
+        "outputId": "7710227b-6f95-4d85-be0f-8542f6901c47"
       },
       "source": [
         "from google.colab import drive\n",
@@ -148,7 +148,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 719
         },
-        "outputId": "7f1ea6bd-9cda-4a24-c65e-9f833e17b57e"
+        "outputId": "c371d028-a1b5-4241-e1a0-62784eaddf7f"
       },
       "source": [
         "class Generator():\n",
@@ -256,15 +256,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 418
         },
-        "outputId": "842c6d3a-f1f2-44bb-ed61-1a3cab23fe35"
+        "outputId": "35d00843-d5f7-49e6-d5b2-76f43fa8ed54"
       },
       "source": [
         "class Discriminator():\n",
         "  def __init__(self):\n",
-        "    self.channel_num = 8\n",
-        "    self.layer_num = 5\n",
+        "    self.channel_num = 32\n",
+        "    self.layer_num = 3\n",
         "    self.latent_num = 8\n",
         "    self.input_shape = (128, 128, 3)\n",
         "    self.patch_shape = (32, 32, 3)\n",
@@ -333,7 +333,7 @@
         "d.patch_model().summary()\n",
         "d.model().summary()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,112 +344,24 @@
             "=================================================================\n",
             "input_3 (InputLayer)         [(None, 32, 32, 3)]       0         \n",
             "_________________________________________________________________\n",
-            "disc_block (disc_block)      (None, 16, 16, 8)         256       \n",
+            "disc_block (disc_block)      (None, 16, 16, 32)        1024      \n",
             "_________________________________________________________________\n",
-            "disc_block_1 (disc_block)    (None, 8, 8, 16)          1232      \n",
+            "disc_block_1 (disc_block)    (None, 8, 8, 64)          18752     \n",
             "_________________________________________________________________\n",
-            "disc_block_2 (disc_block)    (None, 4, 4, 32)          4768      \n",
+            "disc_block_2 (disc_block)    (None, 4, 4, 128)         74368     \n",
             "_________________________________________________________________\n",
-            "disc_block_3 (disc_block)    (None, 2, 2, 64)          18752     \n",
+            "flatten (Flatten)            (None, 2048)              0         \n",
             "_________________________________________________________________\n",
-            "disc_block_4 (disc_block)    (None, 1, 1, 128)         74368     \n",
-            "_________________________________________________________________\n",
-            "flatten (Flatten)            (None, 128)               0         \n",
-            "_________________________________________________________________\n",
-            "dense_block_5 (dense_block)  (None, 512)               68096     \n",
+            "dense_block_5 (dense_block)  (None, 512)               1051136   \n",
             "_________________________________________________________________\n",
             "dense_6 (Dense)              (None, 8)                 4104      \n",
             "_________________________________________________________________\n",
             "activation_1 (Activation)    (None, 8)                 0         \n",
             "=================================================================\n",
-            "Total params: 171,576\n",
-            "Trainable params: 170,056\n",
-            "Non-trainable params: 1,520\n",
-            "_________________________________________________________________\n",
-            "Model: \"discriminator\"\n",
-            "__________________________________________________________________________________________________\n",
-            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-            "==================================================================================================\n",
-            "input_2 (InputLayer)            [(None, 128, 128, 3) 0                                            \n",
-            "__________________________________________________________________________________________________\n",
-            "lambda (Lambda)                 (None, 32, 32, 3)    0           input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lambda_1 (Lambda)               (None, 32, 32, 3)    0           input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lambda_2 (Lambda)               (None, 32, 32, 3)    0           input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lambda_3 (Lambda)               (None, 32, 32, 3)    0           input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lambda_4 (Lambda)               (None, 32, 32, 3)    0           input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lambda_5 (Lambda)               (None, 32, 32, 3)    0           input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lambda_6 (Lambda)               (None, 32, 32, 3)    0           input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lambda_7 (Lambda)               (None, 32, 32, 3)    0           input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lambda_8 (Lambda)               (None, 32, 32, 3)    0           input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lambda_9 (Lambda)               (None, 32, 32, 3)    0           input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lambda_10 (Lambda)              (None, 32, 32, 3)    0           input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lambda_11 (Lambda)              (None, 32, 32, 3)    0           input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lambda_12 (Lambda)              (None, 32, 32, 3)    0           input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lambda_13 (Lambda)              (None, 32, 32, 3)    0           input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lambda_14 (Lambda)              (None, 32, 32, 3)    0           input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lambda_15 (Lambda)              (None, 32, 32, 3)    0           input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "patch_model (Functional)        (None, 8)            171576      lambda[0][0]                     \n",
-            "                                                                 lambda_1[0][0]                   \n",
-            "                                                                 lambda_2[0][0]                   \n",
-            "                                                                 lambda_3[0][0]                   \n",
-            "                                                                 lambda_4[0][0]                   \n",
-            "                                                                 lambda_5[0][0]                   \n",
-            "                                                                 lambda_6[0][0]                   \n",
-            "                                                                 lambda_7[0][0]                   \n",
-            "                                                                 lambda_8[0][0]                   \n",
-            "                                                                 lambda_9[0][0]                   \n",
-            "                                                                 lambda_10[0][0]                  \n",
-            "                                                                 lambda_11[0][0]                  \n",
-            "                                                                 lambda_12[0][0]                  \n",
-            "                                                                 lambda_13[0][0]                  \n",
-            "                                                                 lambda_14[0][0]                  \n",
-            "                                                                 lambda_15[0][0]                  \n",
-            "__________________________________________________________________________________________________\n",
-            "concatenate (Concatenate)       (None, 128)          0           patch_model[0][0]                \n",
-            "                                                                 patch_model[1][0]                \n",
-            "                                                                 patch_model[2][0]                \n",
-            "                                                                 patch_model[3][0]                \n",
-            "                                                                 patch_model[4][0]                \n",
-            "                                                                 patch_model[5][0]                \n",
-            "                                                                 patch_model[6][0]                \n",
-            "                                                                 patch_model[7][0]                \n",
-            "                                                                 patch_model[8][0]                \n",
-            "                                                                 patch_model[9][0]                \n",
-            "                                                                 patch_model[10][0]               \n",
-            "                                                                 patch_model[11][0]               \n",
-            "                                                                 patch_model[12][0]               \n",
-            "                                                                 patch_model[13][0]               \n",
-            "                                                                 patch_model[14][0]               \n",
-            "                                                                 patch_model[15][0]               \n",
-            "__________________________________________________________________________________________________\n",
-            "dense_9 (Dense)                 (None, 1)            129         concatenate[0][0]                \n",
-            "__________________________________________________________________________________________________\n",
-            "dense_10 (Dense)                (None, 8)            1032        concatenate[0][0]                \n",
-            "__________________________________________________________________________________________________\n",
-            "activation_3 (Activation)       (None, 1)            0           dense_9[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "activation_4 (Activation)       (None, 8)            0           dense_10[0][0]                   \n",
-            "==================================================================================================\n",
-            "Total params: 172,737\n",
-            "Trainable params: 171,217\n",
-            "Non-trainable params: 1,520\n",
-            "__________________________________________________________________________________________________\n"
+            "Total params: 1,149,384\n",
+            "Trainable params: 1,147,912\n",
+            "Non-trainable params: 1,472\n",
+            "_________________________________________________________________\n"
           ],
           "name": "stdout"
         }
